--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata: {{ $fullname := printf "%s-%s" .Release.Name .Chart.Name | trunc 63 | trimSuffix "-" }}
-  name: {{ $fullname }}
+metadata:
+  name: {{ .Values.appName }}
   namespace: {{ .Values.appName }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
   selector:
     matchLabels:
-      app: {{ $fullname }}
+      app: {{ .Values.appName }}
   replicas: {{ default 1 .Values.replicaCount | int }}
   template:
     metadata:
       labels:
-        app: {{ $fullname }}
+        app: {{ .Values.appName }}
     spec:
       containers:
-      - name: {{ .Chart.Name }}
-        image: "{{ .Values.image }}"
+      - name: {{ .Values.appName }}
+        image: {{ .Values.image }}
         ports:
         - containerPort: {{ .Values.service.internalPort | int }}
