--- a/values.yaml
+++ b/values.yaml
@@ -2,6 +2,7 @@ replicaCount: 1
 image: ghcr.io/hugoponthieu/test-helm:main
 internalPort: 8080
 appName: testapp
+appURL: apptest.hponthieu.com
 service:
   internalPort: 8080
   externalPort: 8080
