--- a/templates/services.yaml
+++ b/templates/services.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: metadata:
   name: {{ printf "%s-svc" .Values.appName | trunc 63 }}
+  namespace: {{ .Values.appName }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
