--- a/node-dpl/templates/ingress.yaml
+++ b/node-dpl/templates/ingress.yaml
@@ -1,19 +1,18 @@
-apiVersion: v1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ printf "%s-ingress" .Values.appName | trunc 63 }}
   namespace: {{ .Values.appName }}
   labels:
-    app: {{ printf "%s-ingress" .Values.appName | trunc 63 }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-    release: "{{ .Release.Name }}"
   annotations:
     kubernetes.io/ingres.class: "traefik"
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   rules:
-    - host: {{ .Values.appURL }}
-      http:
+  - host: {{ .Values.appURL }}
+    http:
+      paths:      
       - pathType: Prefix
         path: /
         backend:
